--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Welcome</h1>
+<!DOCTYPE html>
+<html>
+   <head>
+       <title>My HTML Document</title>
+   </head>
+   <body>
+       <h1>My HTML Document</h1>
+       <p>This is an example HTML document.</p> 
+   </body>
+</html>
