--- a/index.html
+++ b/index.html
@@ -1,10 +1,73 @@
 <!DOCTYPE html>
-<html>
-   <head>
-       <title>My HTML Document</title>
-   </head>
-   <body>
-       <h1>My HTML Document</h1>
-       <p>This is an example HTML document.</p> 
-   </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Strona Landing Page - Motyw Roślinny</title>
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+
+        header {
+            background-color: #28a745;
+            padding: 20px;
+            text-align: center;
+            color: #fff;
+        }
+
+        section {
+            text-align: center;
+            padding: 50px;
+        }
+
+        h1 {
+            color: #333;
+        }
+
+        p {
+            font-size: 18px;
+            line-height: 1.6;
+            color: #555;
+        }
+
+        .cta-button {
+            font-size: 18px;
+            border-radius: 5px;
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>Witaj na Naszej Stronie</h1>
+        <p>Odkryj piękno roślin w naszym ogrodzie internetowym</p>
+    </header>
+
+    <section>
+        <h2>Odkryj Świat Roślin</h2>
+        <p>Zanurz się w pięknie natury, poznaj różnorodność roślin i ciesz się harmonią przyrody.</p>
+        <a href="#contact" class="btn btn-success cta-button">Skontaktuj się z nami</a>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Strona Landing Page - Motyw Roślinny</p>
+    </footer>
+
+    <!-- Bootstrap JS and Popper.js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
