--- a/index.html
+++ b/index.html
@@ -61,11 +61,12 @@
     <section>
         <h2>n</h2>
         <p></p>
-        <a href="#contact" class="btn btn-success cta-button">Skontaktuj się z nami</a>
+        <img src="tweaking-robot.gif" alt="Opis obrazu">
+        <a href="#contact" class="btn btn-success cta-button"></a>
     </section>
 
     <footer>
-        <p>&copy; 2024 Strona Landing Page - Motyw Roślinny</p>
+        <p></p>
     </footer>
 
     <!-- Bootstrap JS and Popper.js -->
