--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
 
         header {
-            background-color: #28a745;
+            background-color: ##13aeb8;
             padding: 20px;
             text-align: center;
             color: #fff;
@@ -59,7 +59,7 @@
     </header>
 
     <section>
-        <h2>n</h2>
+        <h2></h2>
         <p></p>
         <img src="tweaking-robot.gif" alt="Opis obrazu">
         <a href="#contact" class="btn btn-success cta-button"></a>
