--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strona Landing Page - Motyw Roślinny</title>
     <link rel="icon" href="tweaking-robot.gif" type="image/x-icon">
+    
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
+  @import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
+
         body {
             font-family: 'Arial', sans-serif;
             background-color: #f4f4f4;
