--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strona Landing Page - Motyw Roślinny</title>
     <link rel="icon" href="tweaking-robot.gif" type="image/x-icon">
-    
+     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bungee+Shade:wght@400&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bungee+Shade:wght@700&display=swap">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -14,7 +16,7 @@
   @import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
 
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Bungee Shade', sans-serif;
             background-color: #f4f4f4;
             color: #333;
         }
@@ -57,7 +59,7 @@
 <body>
 
     <header>
-        <h1></h1>
+        <h1>ROBOT</h1>
         <p></p>
     </header>
 
