--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bungee+Shade:wght@400&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bungee+Shade:wght@700&display=swap">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=IBM+Plex+Mono:ital,wght@1,500&display=swap" rel="stylesheet">
+
+    
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -34,11 +39,13 @@
         }
 
         h1 {
+            font-family: 'Bungee Shade', sans-serif;
             color: #333;
-            font-size: 200px;
+            font-weight: 700;
         }
 
         p {
+            font-family: 'IBM Plex Mono', monospace;
             font-size: 18px;
             line-height: 1.6;
             color: #555;
@@ -61,7 +68,7 @@
 
     <header>
         <h1>ROBOT</h1>
-        <p></p>
+        <p>invasion is coming</p>
     </header>
 
     <section>
