--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             font-family: 'Bungee Shade', sans-serif;
             color: #333;
             font-weight: 700;
+            font-size: 150px !important;
         }
 
         p {
