--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         p {
             font-family: 'IBM Plex Mono', monospace;
-            font-size: 18px;
+            font-size: 36px;
             line-height: 1.6;
             color: #555;
         }
@@ -69,7 +69,7 @@
 
     <header>
         <h1>ROBOT</h1>
-        <p>invasion is coming</p>
+        <p>-invasion is coming-</p>
     </header>
 
     <section>
