--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Strona Landing Page - Motyw Roślinny</title>
+    <title>AnnaSynowiecka</title>
     <link rel="icon" href="tweaking-robot.gif" type="image/x-icon">
      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bungee+Shade:wght@400&display=swap">
